--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ CHANGES
 0.17 (unreleased)
 =================
 
-- Nothing changed yet.
+- Upload universal wheels to pypi during release.
 
 
 0.16.1 (2016-10-04)
