Back to development: 0.16.3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES
 *******
 
+0.16.3 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 0.16.2 (2016-10-24)
 ===================
 
