--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,8 @@ CHANGES
 * Bugfix: exception views in mounted apps weren't looked up correctly
   anymore.
 
+* Adds compatibility with WebOb 1.7.
+
 0.16.1 (2016-10-04)
 ===================
 
