--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,12 +4,20 @@ CHANGES
 0.18 (unreleased)
 =================
 
+* **Removed**: ``morepath.body_model_predicate`` is removed from the
+  Morepath API together with the ``morepath.App.load_json`` directive
+  and the ``morepath.request.body_obj`` property.
+  The ``load_json`` infrastructure has been moved to the `more.body_model`_
+  package. So you can use that package if you need this functionality.
+  
+
 * Uploading huge files lead to excessive memory consumption as the whole body
   was consumed for no good reason. This is now fixed.
 
   See `#504`_
 
   .. _#504: https://github.com/morepath/morepath/issues/504
+  .. _more.body_model: https://github.com/morepath/more.body_model
 
 0.17 (2016-12-23)
 =================
