Make sure URL parameters are sorted before generating a link.
This makes link generation stable, which is handy in tests. The
test added would break randomly in the past due to flipping the sort
order of a and b.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,9 @@ CHANGES
 0.19 (unreleased)
 =================
 
-- Nothing changed yet.
-
+* Link generation was unstable when supplied with multiple URL parameters.
+  Sort URL parameters so that link generation is stable. This is convenient
+  in tests.
 
 0.18 (2017-03-17)
 =================
