--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,9 @@ CHANGES
   Sort URL parameters so that link generation is stable. This is convenient
   in tests.
 
+  This could potentially break tests which weren't stable in the past. Fixing
+  the tests to use the alphabetical sort order should fix the issue.
+
 0.18 (2017-03-17)
 =================
 
