--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ CHANGES
 0.19 (unreleased)
 =================
 
-- Nothing changed yet.
+* Added support for Python 3.6 and dropped support for Python 3.3
 
 
 0.18.1 (2017-06-30)
